2011-06-10  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>

	* db/source/printer/db/source/printer/Epson-T42WD_Series.xml:
         Modified Device ID because salse model was changed.

	* db/source/printer/Epson-K100_Series.xml,
         db/source/printer/Epson-K200_Series.xml,
         db/source/printer/Epson-PX_403A.xml,
         db/source/printer/Epson-PX_5V.xml,
         db/source/printer/Epson-PX_K100.xml,
         db/source/printer/Epson-Stylus_NX215.xml,
         db/source/printer/Epson-Stylus_NX415.xml,
         db/source/printer/Epson-Stylus_Photo_R3000.xml,
         db/source/printer/Epson-Stylus_SX205.xml,
         db/source/printer/Epson-Stylus_SX215.xml,
         db/source/printer/Epson-Stylus_SX405.xml,
         db/source/printer/Epson-Stylus_SX415.xml,
         db/source/printer/Epson-Stylus_TX203.xml,
         db/source/printer/Epson-Stylus_TX209.xml,
         db/source/printer/Epson-Stylus_TX213.xml,
         db/source/printer/Epson-Stylus_TX219.xml,
         db/source/printer/Epson-Stylus_TX409.xml,
         db/source/printer/Epson-Stylus_TX419.xml:
         Modified file permission.

	* db/source/printer/Epson-Stylus_Photo_R2000.xml,
	 db/source/driver/epson-escpr.xml:
         Added new printer XML files for epson-escpr.xml.

	* db/source/printer/Epson-ME_340_Series.xml,
         db/source/printer/Epson-NX130_Series.xml,
         db/source/printer/Epson-NX130_TX130_Series.xml,
         db/source/printer/Epson-SX130_Series.xml,
         db/source/printer/Epson-TX130_Series.xml,
         db/source/printer/Epson-TX133_TX135_Series.xml:
         Added new printer XML files.

2011-05-27  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Oki-C5750.xml, printer/Xerox-Phaser_4400DX.xml: Added
	  missing <functionality> (rating) tags.

	* printer/Ricoh-Aficio_SP_1000S.xml, printer/Ricoh-Aficio_SP_1100S.xml:
	  Corrected manufacturer tags in the autodetection data.

	* xmlschema/printer.xsd: Do not make the <mechanism> section in the