@@ -21,37 +21,37 @@
   <enum_vals>
     <enum_val id="ev/963">
       <ev_longname>
-        <en>Tray 1</en>
+        <en>Multipurpose Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray1</en>
+        <en>Multipurpose</en>
       </ev_shortname>
       <ev_driverval>TRAY3</ev_driverval>
     </enum_val>
     <enum_val id="ev/964">
       <ev_longname>
-        <en>Tray 2</en>
+        <en>Upper/Main Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray2</en>
+        <en>Upper</en>
       </ev_shortname>
       <ev_driverval>TRAY0</ev_driverval>
     </enum_val>
     <enum_val id="ev/965">
       <ev_longname>
-        <en>Tray 3</en>
+        <en>Middle Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray3</en>
+        <en>Middle</en>
       </ev_shortname>
       <ev_driverval>TRAY1</ev_driverval>
     </enum_val>
     <enum_val id="ev/966">
       <ev_longname>
-        <en>Tray 4</en>
+        <en>Lower Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray4</en>
+        <en>Lower</en>
       </ev_shortname>
       <ev_driverval>TRAY2</ev_driverval>
     </enum_val>
