@@ -91,39 +91,39 @@
       </ev_shortname>
       <ev_driverval>2</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-4-5-InputSlot-Tray1">
+    <enum_val id="ev/PCL-4-5-InputSlot-Multipurpose">
       <ev_longname>
-        <en>Tray 1</en>
+        <en>Multipurpose Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray1</en>
+        <en>Multipurpose</en>
       </ev_shortname>
       <ev_driverval>8</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-4-5-InputSlot-Tray2">
+    <enum_val id="ev/PCL-4-5-InputSlot-Upper">
       <ev_longname>
-        <en>Tray 2</en>
+        <en>Upper/Main Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray2</en>
+        <en>Upper</en>
       </ev_shortname>
       <ev_driverval>1</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-4-5-InputSlot-Tray3">
+    <enum_val id="ev/PCL-4-5-InputSlot-Middle">
       <ev_longname>
-        <en>Tray 3</en>
+        <en>Middle Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray3</en>
+        <en>Middle</en>
       </ev_shortname>
       <ev_driverval>4</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-4-5-InputSlot-Tray4">
+    <enum_val id="ev/PCL-4-5-InputSlot-Lower">
       <ev_longname>
-        <en>Tray 4</en>
+        <en>Lower Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray4</en>
+        <en>Lower</en>
       </ev_shortname>
       <ev_driverval>5</ev_driverval>
     </enum_val>
