@@ -62,30 +62,30 @@
       </ev_shortname>
       <ev_driverval>2</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray1">
+    <enum_val id="ev/PCL-XL-InputSlot-Multipurpose">
       <ev_longname>
-        <en>Tray 1</en>
+        <en>Multipurpose Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray1</en>
+        <en>Multipurpose</en>
       </ev_shortname>
       <ev_driverval>3</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray2">
+    <enum_val id="ev/PCL-XL-InputSlot-Upper">
       <ev_longname>
-        <en>Tray 2</en>
+        <en>Upper/Main Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray2</en>
+        <en>Upper</en>
       </ev_shortname>
       <ev_driverval>4</ev_driverval>
     </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray3">
+    <enum_val id="ev/PCL-XL-InputSlot-Middle">
       <ev_longname>
-        <en>Tray 3</en>
+        <en>Middle Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray3</en>
+        <en>Middle</en>
       </ev_shortname>
       <ev_driverval>5</ev_driverval>
       <constraints>
@@ -94,56 +94,14 @@
         </constraint>
       </constraints>
     </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray4">
+    <enum_val id="ev/PCL-XL-InputSlot-Lower">
       <ev_longname>
-        <en>Tray 4</en>
+        <en>Lower Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray4</en>
+        <en>Lower</en>
       </ev_shortname>
       <ev_driverval>6</ev_driverval>
-      <constraints>
-        <constraint sense="false">
-          <driver>pxl1010</driver>
-        </constraint>
-      </constraints>
-    </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray5">
-      <ev_longname>
-        <en>Tray 5</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>Tray5</en>
-      </ev_shortname>
-      <ev_driverval>7</ev_driverval>
-      <constraints>
-        <constraint sense="false">
-          <driver>pxl1010</driver>
-        </constraint>
-      </constraints>
-    </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray6">
-      <ev_longname>
-        <en>Tray 6</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>Tray6</en>
-      </ev_shortname>
-      <ev_driverval>8</ev_driverval>
-      <constraints>
-        <constraint sense="false">
-          <driver>pxl1010</driver>
-        </constraint>
-      </constraints>
-    </enum_val>
-    <enum_val id="ev/PCL-XL-InputSlot-Tray7">
-      <ev_longname>
-        <en>Tray 7</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>Tray7</en>
-      </ev_shortname>
-      <ev_driverval>9</ev_driverval>
       <constraints>
         <constraint sense="false">
           <driver>pxl1010</driver>
