@@ -41,28 +41,28 @@
     </enum_val>
     <enum_val id="ev/905">
       <ev_longname>
-        <en>Tray 1</en>
+        <en>Multipurpose Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray1</en>
+        <en>Multipurpose</en>
       </ev_shortname>
       <ev_driverval>/ManualFeed false /MediaPosition 3</ev_driverval>
     </enum_val>
     <enum_val id="ev/906">
       <ev_longname>
-        <en>Tray 2</en>
+        <en>Upper/Main Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray2</en>
+        <en>Upper</en>
       </ev_shortname>
       <ev_driverval>/ManualFeed false /MediaPosition 0</ev_driverval>
     </enum_val>
     <enum_val id="ev/907">
       <ev_longname>
-        <en>Tray 3</en>
+        <en>Lower Tray</en>
       </ev_longname>
       <ev_shortname>
-        <en>Tray3</en>
+        <en>Lower</en>
       </ev_shortname>
       <ev_driverval>/ManualFeed false /MediaPosition 1</ev_driverval>
     </enum_val>
