@@ -1,3 +1,11 @@
+2011-06-16  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* opt/161.xml, opt/190.xml, opt/PCL-4-5-InputSlot.xml,
+	  opt/PCL-XL-InputSlot.xml, opt/Postscript-InputSlot.xml:
+	  Renamed choices of the manufacturer-independent "InputSlot" options
+	  so that they do not use tray numbers any more. The tray numbering
+	  varies from manufacturer to manufacturer (Debian bug #530600).
+
 2011-06-10  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
 
 	* db/source/printer/db/source/printer/Epson-T42WD_Series.xml:
